--- a/src/pages/ops-tools/styles/index.scss
+++ b/src/pages/ops-tools/styles/index.scss
@@ -1,3 +1,7 @@
-html {
-  background-color: #eff4ff;
+@import './dark';
+
+body {
+  font-family: 'Microsoft YaHei', '微软雅黑', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
