--- a/src/pages/ops-tools/styles/element/index.scss
+++ b/src/pages/ops-tools/styles/element/index.scss
@@ -1,6 +1,7 @@
 @import './dark';
 
 :root {
+  --logo-color: hsl(210deg 6% 21%);
   --background-deep: #f1f3f6;
   --menu-item-color: hsl(210deg 6% 21%);
   --menu-item-active-background-color: hsl(212deg 100% 45% / 15%);
