--- a/src/pages/ops-tools/styles/index.scss
+++ b/src/pages/ops-tools/styles/index.scss
@@ -1,7 +1,9 @@
 @import './element/index';
 
 body {
-  font-family: 'Microsoft YaHei', '微软雅黑', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
