--- a/src/pages/ops-tools/styles/index.scss
+++ b/src/pages/ops-tools/styles/index.scss
@@ -1,4 +1,4 @@
-@import './element/index';
+@use './element/index';
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
