更新项目配置

--- a/src/pages/ops-tools/styles/index.scss
+++ b/src/pages/ops-tools/styles/index.scss
@@ -6,4 +6,5 @@ body {
     'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: normal;
 }
