--- a/src/pages/ops-tools/styles/element/index.scss
+++ b/src/pages/ops-tools/styles/element/index.scss
@@ -1,5 +1,5 @@
-@use './dark';
-@use './default';
+@use './theme/dark';
+@use './theme/light';
 
 .el-card {
   --el-card-border-radius: 8px !important;
