更新工程配置

--- a/src/pages/ops-tools/styles/element/index.scss
+++ b/src/pages/ops-tools/styles/element/index.scss
@@ -8,4 +8,8 @@
     padding: calc(var(--el-card-padding) - 4px) var(--el-card-padding);
     font-weight: bold;
   }
+
+  .el-card__body {
+    box-sizing: border-box;
+  }
 }
