--- a/src/pages/ops-tools/styles/element/theme/dark.scss
+++ b/src/pages/ops-tools/styles/element/theme/dark.scss
@@ -1,9 +1,9 @@
 @use 'element-plus/theme-chalk/src/dark/css-vars.scss' as *;
 
 html.dark {
-  --logo-color: hsl(0deg 0% 95%);
+  --logo-color: #f2f2f2;
   --background-deep: #121212;
-  --menu-item-color: hsl(0deg 0% 95% / 80%);
-  --menu-item-active-background-color: hsl(216deg 5% 19%);
-  --menu-item-active-color: hsl(0deg 0% 98%);
+  --menu-item-color: #f2f2f2cc;
+  --menu-item-active-background-color: #2e3033;
+  --menu-item-active-color: #fafafa;
 }
