--- a/src/pages/ops-tools/styles/index.scss
+++ b/src/pages/ops-tools/styles/index.scss
@@ -1,4 +1,5 @@
 @use './element/index';
+@use './transition';
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
